<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medicare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_all">AllActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_knowledge">KnowledgeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="title_activity_reminder_new_list">ReminderNewListActivity</string>
    <string name="title_activity_reminder_details">ReminderDetailsActivity</string>
    <string name="title_activity_remind_later">RemindLaterActivity</string>
    <string name="title_activity_reschedule">RescheduleActivity</string>
    <string name="title_activity_pregnancy_control">PregnancyControlActivity</string>
    <string name="title_activity_ovulation_period">OvulationPeriodActivity</string>
    <string name="title_activity_my_daily">MyDailyActivity</string>
    <string name="title_activity_set_target">SetTargetActivity</string>
    <string name="title_activity_set_target_details">SetTargetDetailsActivity</string>
    <string name="title_activity_my_daily_add_categories">MyDailyAddCategoriesActivity</string>
    <string name="title_activity_my_daily_add_cat_details">MyDailyAddCatDetailsActivity</string>
    <string name="title_activity_medication">MedicationActivity</string>
    <string name="title_activity_my_medication">MyMedicationActivity</string>
    <string name="title_activity_my_simptoms">MySimptomsActivity</string>
    <string name="title_activity_profile_customer">ProfileCustomerActivity</string>
    <string name="title_activity_profile_non_customer">ProfileNonCustomerActivity</string>
    <string name="title_activity_profile_details">ProfileDetailsActivity</string>
    <string name="title_activity_grid_view_gallery">GridViewGalleryActivity</string>
    <string name="title_activity_location_details">LocationDetailsActivity</string>
    <string name="title_activity_location_details_direction">LocationDetailsDirectionActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_done">DoneActivity</string>
    <string name="title_activity_knowledge_details">KnowledgeDetailsActivity</string>
    <string name="title_activity_language">LanguageActivity</string>
    <string name="title_activity_social_media">SocialMediaActivity</string>
    <string name="mapsKey">AIzaSyAv7GlDFYEFTxGATKjsS2Ra98ccTldILIA</string>
    <string name="mapsKeyMac">AIzaSyCH_mEhLCSOqBC8wKpO4J8yqjEo1YU4Td8</string>
    <string name="title_activity_medical_control">MedicalControlActivity</string>
    <string name="title_activity_create_alarm_date">CreateAlarmDateActivity</string>
    <string name="title_activity_pop_up_alarm_date">PopUpAlarmDateActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="progressDialogTitle">In Progress</string>
    <string name="progressDialogMessage">Please Wait</string>
    <string name="txtCard">Card Number</string>
    <string name="txtBirthdate">Birthdate</string>
    <string name="txtNPK">NPK</string>
    <string name="txtCompany">Company</string>
    <string name="lblDisclaimer1">Disclaimer</string>
    <string name="lblDisclaimer2">This application is just a Health Guidance\nCall a doctor or visit a hospital it having a health issues</string>
    <string name="lblProfile">For Garda Medicare Customer,please enter the insurance card number</string>
    <string name="lblfoto">Enter your optional profile picture</string>
    <string name="txtName">Name</string>
    <string name="txtAge">Age</string>
    <string name="txtboc">Benefit of coverage</string>
    <string name="txtclaimh">Claim history</string>
    <string name="txtdiseaseh">Disease history</string>
    <string name="txtemgergency">Emergency</string>
    <string name="txtviewsetting">View Setting</string>
    <string name="txtmycard">My insurance card</string>
    <string name="txthospital">Hospital</string>
    <string name="txttreatment">Card Number</string>
    <string name="txtdiagnosis">Diagnosis</string>
    <string name="txtphone">Phone number</string>
    <string name="txtentercontact">Enter your emergency contact number</string>
    <string name="txtsetting1">All</string>
    <string name="txtsetting2">Spouse</string>
    <string name="txtsetting3">First Child</string>
    <string name="txtsetting4">Second Child</string>
    <string name="txtsetting5">Third Child</string>
    <string name="txtsetting6">Only me</string>
    <string name="txtBOC1">Inpatient</string>
    <string name="txtBOC2">Outpatient</string>
    <string name="txtBOC3">Dental</string>
    <string name="txtBOC4">Glasses</string>
    <string name="txtBOC5">Maternity</string>
    <string name="txtinpatient1">Room and Board</string>
    <string name="txtinpatient2">Surgery</string>
    <string name="txtinpatient3">Specialist</string>
    <string name="txtdisease1">Asthma</string>
    <string name="txtdisease2">Cholesterol</string>
    <string name="txtdisease3">Diabetes melitus</string>
    <string name="txtdisease4">Heart attack</string>
    <string name="txtdisease5">Hypertension</string>
    <string name="txtdisease6">TBC</string>
    <string name="txtdisease7">Input your alergy</string>
    <string name="title_activity_profile_forgot">ProfileForgotActivity</string>

</resources>
