<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aab.medicare.SettingActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_home" />

	<EditText
        android:id="@+id/txt_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/txtBiru"
        android:textColor="@color/txtBiru"
        android:hint="@string/txtCompany" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />

    <EditText
        android:id="@+id/txt_npk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/txtBiru"
        android:textColor="@color/txtBiru"
        android:hint="@string/txtNPK" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />
    
    <EditText
        android:id="@+id/txt_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/White"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColorHint="@color/txtBiru"
        android:textColor="@color/txtBiru"
        android:hint="@string/txtBirthdate" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/line_horiz" />
    
    <ImageButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_submit_round"
        android:onClick="onClickProfileConfirm" />

</LinearLayout>
