<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aab.medicare.SettingActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:background="@color/White">
        
		<ImageView
	        android:id="@+id/img_boc"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="0.7"
	        android:padding="3dp"
	        android:src="@drawable/btn_forgot_card_number" />
		
		<TextView
	        android:id="@+id/lbl_name"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"
	        android:gravity="center|left"
	        android:background="@color/White"
	        android:paddingLeft="12dp"
	        android:text="@string/lblfoto"
	        android:textColor="@color/txtBiru" />
        
    </LinearLayout>

    <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtName"
                android:textColor="@color/txtBiru" />

            <TextView
                android:id="@+id/txtname_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:gravity="right"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtName"
                android:textColor="@color/txtBiru" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtAge"
                android:textColor="@color/txtBiru" />

            <TextView
                android:id="@+id/txtage_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:gravity="right"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtAge"
                android:textColor="@color/txtBiru" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtCompany"
                android:textColor="@color/txtBiru" />

            <TextView
                android:id="@+id/txtcompany_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:gravity="right"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtCompany"
                android:textColor="@color/txtBiru" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtboc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtboc"
                android:textColor="@color/txtBiru" />

            <ImageView
                android:id="@+id/img_boc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="0.9"
                android:background="@color/White"
                android:padding="3dp"
                android:src="@drawable/icon_next" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_claimh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtclaimh"
                android:textColor="@color/txtBiru" />

            <ImageView
                android:id="@+id/img_claimh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="0.9"
                android:background="@color/White"
                android:padding="3dp"
                android:src="@drawable/icon_next" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_diseaseh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtdiseaseh"
                android:textColor="@color/txtBiru" />

            <ImageView
                android:id="@+id/img_diseaseh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="0.9"
                android:background="@color/White"
                android:padding="3dp"
                android:src="@drawable/icon_next" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtemgergency"
                android:textColor="@color/txtBiru" />

            <ImageView
                android:id="@+id/img_emergency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="0.9"
                android:background="@color/White"
                android:padding="3dp"
                android:src="@drawable/icon_next" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_viewsetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtviewsetting"
                android:textColor="@color/txtBiru" />

            <ImageView
                android:id="@+id/img_viewsetting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="0.9"
                android:background="@color/White"
                android:padding="3dp"
                android:src="@drawable/icon_next" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_mycard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/White"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/txtmycard"
                android:textColor="@color/txtBiru" />

            <ImageView
                android:id="@+id/img_mycard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="0.9"
                android:background="@color/White"
                android:padding="3dp"
                android:src="@drawable/icon_next" />
        </LinearLayout>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />
    </LinearLayout>
    
</LinearLayout>
