<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aab.medicare.ProfileActivity" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="@string/lblProfile"
            android:textColor="@color/BiruTua2" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <EditText
            android:id="@+id/txtCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtCard"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/txtBiru"
            android:textColorHint="@color/txtBiru" >

            <requestFocus />
        </EditText>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/line_horiz" />

        <EditText
            android:id="@+id/txtBirthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtBirthdate"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/txtBiru"
            android:textColorHint="@color/txtBiru" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            layout="@layout/line_horiz" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnNonMember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@drawable/btn_non_member"
            android:onClick="onClickProfile" />

        <ImageButton
            android:id="@+id/btnForgot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@drawable/btn_forgot_card_number"
            android:onClick="onClickProfile" />

        <ImageButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@drawable/btn_submit_round"
            android:onClick="onClickProfile" />
        
    </LinearLayout>

</LinearLayout>
